# dgp

./: .gitignore  CLAUDE.md  CMakeLists.txt  DECISIONS.md  DEPLOYMENT.md  PROBLEMS.md  README.md  STATUS.md  UI_UX_REVIEW.md  WEB_APP_EXPANSION_PLAN.md  build.gradle  demo.sh  demo_gen.py  dgp-simple.c  genseed.py  gradle.properties  privacy.html  run_tests.sh  seed2qr.sh  seed_to_hex.py  seed_to_numbers.py  settings.gradle  test_results.txt
LICENSES/: README.md
android/: build_log.txt  build_log_2.txt  full_build_log.txt
app/: build.gradle
dgp.egg-info/: PKG-INFO  (+1 more)
linux/: .coverage  .gitignore  README.md  pyproject.toml
linux/dgp/: __main__.py  btc.py  engine.py  exportcrypto.py  prng.py  service.py  ssh.py  store.py  testvectors.py  vault.py  wordlist.py
linux/dgp/cli/: __init__.py  config.py  extras.py  gen.py  vectors.py
linux/dgp/gui/: app.py  mainwindow.py  settings.py  vaultdialog.py  vectorsview.py
linux/packaging/: dgp-gui.desktop
linux/tests/: conftest.py  test_android_compat.py  test_btc.py  test_cli_config.py  test_cli_extras.py  test_cli_gen.py  test_engine.py  test_export.py  test_gui_import.py  test_gui_smoke.py  test_prng.py  test_service.py  test_ssh.py  test_subaccount.py  test_vault.py  test_vectors.py
linux/tests/fixtures/: AndroidExportFixture.java
linux/tests/gui/: _helpers.py  conftest.py  test_cli_entrypoint.py  test_edge_cases.py  test_mainwindow_list.py  test_reorder.py  test_settings_export.py  test_settings_import.py  test_settings_seed_account.py  test_smoke.py  test_unlock.py  test_vault.py  test_vectors_view.py
(+95 files in other folders)
