[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dgp"
version = "0.1.0"
description = "Deterministically Generated Passwords — Linux port"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "PyNaCl>=1.5",
    "coincurve>=19",
    "PyQt6>=6.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-qt>=4.4",
]

[project.scripts]
dgp = "dgp.cli:main"

[project.gui-scripts]
dgp-gui = "dgp.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dgp*"]

[tool.setuptools.package-data]
"dgp.data" = ["english.txt"]

[tool.pytest.ini_options]
# pytest-qt crashes in this sandbox (libxkbcommon.so.0 missing); GUI tests
# must be run separately with a display. Disable the plugin globally here.
addopts = "-p no:pytest-qt"
